--- a/styles/index.css
+++ b/styles/index.css
@@ -14,6 +14,9 @@ header.container{
 	display: flex;
 	flex-direction: column;
 }
+#mainHeader{
+	background: url('../images/large-screen-banner.png') no-repeat center center/cover;
+}
 
 #logoBox{
 	width:250px;
@@ -180,7 +183,7 @@ ul#menu li a{
 	}
 
 	#mainHeader{
-		background: url('../images/large-screen-banner.png') no-repeat center center/cover;
+		background: url('../images/mobile-banner.jpg') no-repeat center center/cover;
 	}
 }
 
